@startuml
title Field - Core Class Diagram

package "hydromodpy.spatial.field.core.field_mesh" {
  class MeshCell {
    +index: int
    +kind: str
    +node_indices: tuple[int, ...]
    +vertices: np.ndarray
    +centroid: tuple[float, float]
  }

  class MeshWithValues {
    +mesh: BaseFieldMesh
    +cell_values: np.ndarray
    +label: str | None
    +kind
    +n_cells
  }

  abstract class BaseFieldMesh {
    +kind
    +shape
    +n_nodes
    +n_cells
    +cells
    +iter_cells()
    +cell_centroids()
    +to_cell_values(values)
    +plot_cell_values(ax, cell_values, ...)
    +attach_cell_values(values, label=None)
  }

  abstract class FieldMesh {
    +from_unit_square(target_n_cells, mesh_kind="structured", seed=42)
    +from_dict(config)
    +from_toml(toml_path, section="mesh")
  }
}

package "hydromodpy.spatial.field.core.field_spatial" {
  abstract class Field {
    +identifier: str
    +on_mesh(mesh, cell_samples_per_axis=10)
    +from_dict(config)
    +from_toml(toml_path, section="field")
  }

  abstract class FieldDiscretization {
    +mesh: BaseFieldMesh
    +field_id: str
    +aggregation_name()
    +aggregation
    +weighted_components()
  }
}

package "hydromodpy.spatial.field.core.field_spatial_weighted_discretization" {
  class WeightedAverageFieldDiscretization {
    +zone_keys: tuple[str, ...]
    +fractions_by_zone: dict[str, np.ndarray]
    +aggregation_name()
    +weighted_components()
  }
}

package "hydromodpy.spatial.field.core.field_param" {
  class FieldParam {
    +identifier: str
    +kind: str
    +value: float | None
    +values_by_key: dict[str, float] | None
    +field_spatial_id: str | None
    +to_array(...)
    +to_mesh_field(field_discretization=None, mesh=None, label=None)
    +map_zone_ids(zone_ids)
    +as_dict()
    +from_dict(config)
    +from_toml(toml_path, section="field")
  }
}

BaseFieldMesh "1" *-- "0..*" MeshCell
MeshWithValues --> BaseFieldMesh
BaseFieldMesh --> MeshWithValues : attach_cell_values(...)

FieldMesh ..> BaseFieldMesh : builds one concrete mesh

FieldDiscretization --> BaseFieldMesh
FieldDiscretization <|-- WeightedAverageFieldDiscretization

Field ..> FieldDiscretization : on_mesh(...)

FieldParam ..> BaseFieldMesh : homogeneous mapping
FieldParam ..> FieldDiscretization : heterogeneous mapping

@enduml
